--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -10,7 +10,7 @@
 <channel>
 	<title>
 	Comentários sobre Clínica de estética, confiança com profissionais incríveis	</title>
-<atom:link href="index" rel="self" type="application/rss+xml" />
+<atom:link href="" rel="self" type="application/rss+xml" />
 <link>https://clinicaestetica.srv.br</link>
 <description>Clínicas de estética com foco na qualidade de vida e saúde, procedimentos seguros e com excelentes resultados, melhora na estética, perda de peso, cicatrizes e outros.</description>
 <lastBuildDate>Fri, 17 Feb 2023 09:52:51 +0000</lastBuildDate>
