--- a/feed/index.html
+++ b/feed/index.html
@@ -11,7 +11,7 @@
 
 <channel>
 	<title>Clínica de estética, confiança com profissionais incríveis</title>
-<atom:link href="index" rel="self" type="application/rss+xml" />
+<atom:link href="" rel="self" type="application/rss+xml" />
 <link>https://clinicaestetica.srv.br</link>
 <description>Clínicas de estética com foco na qualidade de vida e saúde, procedimentos seguros e com excelentes resultados, melhora na estética, perda de peso, cicatrizes e outros.</description>
 <lastBuildDate>Thu, 01 Sep 2022 10:47:51 +0000</lastBuildDate>
@@ -299,7 +299,7 @@ hourly </sy:updatePeriod>
 </div>
 <div class="elementor-element elementor-element-614b833 elementor-widget elementor-widget-text-editor" data-id="614b833" data-element_type="widget" data-widget_type="text-editor.default">
 <div class="elementor-widget-container">
-<p>Que tal experimentar um dos nossos tratamentos estéticos? Tem certeza que vai adorar os resultados! Ação: Faça sua avaliação agora mesmo na clínica de estética, outro procedimento é a <a title="criomodelagem" href="../criomodelagem-para-reducao-de-medidas/index" target="_blank" rel="noopener">criomodelagem</a> para redução de medidas.</p> </div>
+<p>Que tal experimentar um dos nossos tratamentos estéticos? Tem certeza que vai adorar os resultados! Ação: Faça sua avaliação agora mesmo na clínica de estética, outro procedimento é a <a title="criomodelagem" href="../criomodelagem-para-reducao-de-medidas/" target="_blank" rel="noopener">criomodelagem</a> para redução de medidas.</p> </div>
 </div>
 <div class="elementor-element elementor-element-40a643f elementor-position-left elementor-vertical-align-top elementor-widget elementor-widget-image-box" data-id="40a643f" data-element_type="widget" data-widget_type="image-box.default">
 <div class="elementor-widget-container">
@@ -524,7 +524,7 @@ A Clínica de Estética é uma das melhores clínicas da cidade, onde você enco
 </div>
 <div class="elementor-element elementor-element-6fbdb125 elementor-widget elementor-widget-text-editor" data-id="6fbdb125" data-element_type="widget" data-widget_type="text-editor.default">
 <div class="elementor-widget-container">
-<p>O peeling de diamante é um tratamento simples que pode ser realizado em uma clínica de estética. A sessão de peeling leva cerca de a minutos. Após a sessão, a pele pode ficar avermelhada, mas esse efeito irá desaparecer em poucas horas. A pele pode ficar levemente sensível após o tratamento, mas isso irá desaparecer em poucos dias. Outros procedimentos estéticos como a <a title="carboxiterapia" href="../carboxiterapia/index">carboxiterapia</a> pode ser um implemento ótimo combinado com o peeling.</p> </div>
+<p>O peeling de diamante é um tratamento simples que pode ser realizado em uma clínica de estética. A sessão de peeling leva cerca de a minutos. Após a sessão, a pele pode ficar avermelhada, mas esse efeito irá desaparecer em poucas horas. A pele pode ficar levemente sensível após o tratamento, mas isso irá desaparecer em poucos dias. Outros procedimentos estéticos como a <a title="carboxiterapia" href="../carboxiterapia/">carboxiterapia</a> pode ser um implemento ótimo combinado com o peeling.</p> </div>
 </div>
 </div>
 </div>
