--- a/xmlrpc0db0.html
+++ b/xmlrpc0db0.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <title>Page Not Found - Clínica de estética, confiança com profissionais incríveis</title>
-<meta name="robots" content="follow, noindex" />
+<meta name="robots" content="follow, no" />
 <meta property="og:locale" content="pt_BR" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Page Not Found - Clínica de estética, confiança com profissionais incríveis" />
